--- a/index.html
+++ b/index.html
@@ -28,30 +28,19 @@
       </div>
     </nav>
 
-    <!-- <div id="index-banner" class="parallax-container">
-      <div class="section no-pad-bot">
-        <div class="container">
-          <br><br>
-          <h1 class="header center teal-text text-lighten-2">Fine Dining, Delivered.</h1>
-          <div class="row center">
-            <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">PLACE AN ORDER</a>
-          </div>
-          <br><br>
-        </div>
-      </div>
-      <div class="parallax"><img src="img/hero.jpg" alt="hero image"></div>
-    </div> -->
-
     <div id="index-banner" class="parallax-container">
-      <img src="img/hero.jpg" alt="hero image" />
-      <h1 class="header center teal-text text-lighten-2">Parallax Template</h1>
+      <!-- <img src="img/hero.jpg" alt="hero image" /> -->
+      <h1 class="header center">Fine Dining, Delivered</h1>
+      <div class="row center">
+        <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light">PLACE AN ORDER</a>
+      </div>
     </div>
 
 <div class="card-container row">
   <div class="col s12 m6">
     <div class="card darken-1">
       <div class="card-content">
-        <span class="card-title">Shop Online</span>
+        <span class="card-title"><img class="service-icon" src="img/ic_shopping_basket_black_24px.svg" alt="shopping"/><h2>Shop Online</h2></span>
         <p>
           Using our convenient web app, you'll get all the power of gFood without having to call your order in. Order in your pajamas, order 24 hours a day, order on Christmas, we're here to serve you.
         </p>
@@ -62,7 +51,7 @@
   <div class="col s12 m6">
     <div class="card darken-1">
       <div class="card-content">
-        <span class="card-title">Fast Delivery</span>
+        <span class="card-title"><img class="service-icon" src="img/ic_local_shipping_black_24px.svg" alt="shipping" /><h2>Fast Delivery</h2></span>
         <p>
           You've never seen ordering this quick. Our proprietary ordering rocket ship delivery team allows you to spend less time being hungry, and more time doing what matters most to you. We'd ask what that is, but gFood respects your privacy.
         </p>
@@ -73,7 +62,7 @@
   <div class="col s12 m6">
     <div class="card darken-1">
       <div class="card-content">
-        <span class="card-title">Great Deals</span>
+        <span class="card-title"><img class="service-icon" src="img/ic_local_atm_black_24px.svg" alt="deals" /><h2>Great Deals</h2></span>
         <p>
           Money: You've got it, we want it. But let it never be said we're not incredibly fair! Burger sales? Check. Pizza sales? Check. Burger and pizza sales?? Check, check, check! We seriously can't stop making deals.
         </p>
