completed the basics / added a CNAME to test deploymnet on surge

--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
       </div>
     </nav>
 
-    <div id="index-banner" class="parallax-container">
+
+    <div class="parallax-container">
       <!-- <img src="img/hero.jpg" alt="hero image" /> -->
-      <h1 class="header center">Fine Dining, Delivered</h1>
+      <h1 class="header center">Fine Dining, Delivered.</h1>
       <div class="row center">
         <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light">PLACE AN ORDER</a>
       </div>
