toast message for order conditions working

--- a/order.html
+++ b/order.html
@@ -42,7 +42,7 @@
                 <p>$8.99</p>
               </div>
               <div class="card-action">
-                <a id="burger" name="Royale with Cheese" class="pink-text">ADD TO ORDER</a>
+                <a name="Royale with Cheese" href="index.html" class="pink-text food-item">ADD TO ORDER</a>
               </div>
             </div>
           </div>
@@ -56,7 +56,7 @@
                 <p>$11.99</p>
               </div>
               <div class="card-action">
-                <a id="pizza" href="index.html" class="pink-text">ADD TO ORDER</a>
+                <a name="Arugula Pie" href="index.html" class="pink-text food-item">ADD TO ORDER</a>
               </div>
             </div>
           </div>
@@ -70,7 +70,7 @@
                 <p>$14.99</p>
               </div>
               <div class="card-action">
-                <a id="ribs" href="index.html" class="pink-text">ADD TO ORDER</a>
+                <a name="Smoked Swine" href="index.html" class="pink-text food-item">ADD TO ORDER</a>
               </div>
             </div>
           </div>
@@ -84,7 +84,7 @@
                 <p>$7.99</p>
               </div>
               <div class="card-action">
-                <a id="icecream" href="index.html" class="pink-text">ADD TO ORDER</a>
+                <a name="Ice Cream Biscut" href="index.html" class="pink-text food-item">ADD TO ORDER</a>
               </div>
             </div>
           </div>
