--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Galvanize Delivers</title>
+
     <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
@@ -11,7 +12,10 @@
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+
+    <!-- custom -->
     <link rel="stylesheet" href="custom.css">
+    <script src="js/script.js" defer></script>
 
 </head>
 
@@ -21,71 +25,84 @@
     <script type="text/javascript" src="js/materialize.min.js"></script>
 
     <nav>
-        <div class="nav-wrapper">
-            <a href="#" class="brand-logo">Galvanize Delivers</a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="sass.html">Order Delivery</a></li>
-            </ul>
+        <div class="nav-wrapper blue darken-3">
+          <a href="index.html" class="brand-logo">Galvanize Delivers</a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+              <li><a href="order.html">Order Delivery</a></li>
+          </ul>
         </div>
     </nav>
 
 
-    <!-- <div class="parallax-container">
-        <img class="index-banner" src="img/hero.jpg" alt="hero image" />
-        <h1 class="header center">Fine Dining, Delivered.</h1>
-        <div class="row center">
-            <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light">PLACE AN ORDER</a>
-        </div>
-    </div> -->
-
     <div id="index-banner" class="parallax-container">
       <div class="section no-pad-bot">
         <div class="container">
-          <br><br>
-          <h1 class="header center">Fine Dining, Delivered</h1>
+          <br><br><br><br>
+          <h1 class="header center white-text">Fine Dining, Delivered.</h1>
           <div class="row center">
-            <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light">PLACE AN ORDER</a>
+            <a href="order.html" id="download-button" class="btn-large waves-effect waves-light pink lighten-1">PLACE AN ORDER</a>
           </div>
-          <br><br>
         </div>
       </div>
-      <div class="parallax"><img src="img/hero.jpg" alt="Hero Image"></div>
+      <div class="parallax"><img src="img/hero.jpg" alt="hero image"></div>
     </div>
-    <div class="card-container row">
-        <div class="col s12 m6">
-            <div class="card darken-1 card-no-shadow">
-                <div class="card-content">
-                    <span class="card-title"><img class="service-icon" src="img/ic_shopping_basket_black_24px.svg" alt="shopping"/><h2>Shop Online</h2></span>
-                    <p>
-                        Using our convenient web app, you'll get all the power of gFood without having to call your order in. Order in your pajamas, order 24 hours a day, order on Christmas, we're here to serve you.
-                    </p>
-                </div>
-            </div>
-        </div>
 
-        <div class="col s12 m6">
-            <div class="card darken-1 card-no-shadow">
-                <div class="card-content">
-                    <span class="card-title"><img class="service-icon" src="img/ic_local_shipping_black_24px.svg" alt="shipping" /><h2>Fast Delivery</h2></span>
-                    <p>
-                        You've never seen ordering this quick. Our proprietary ordering rocket ship delivery team allows you to spend less time being hungry, and more time doing what matters most to you. We'd ask what that is, but gFood respects your privacy.
-                    </p>
-                </div>
+    <div class="container">
+      <div class="row">
+        <div class="col l4">
+          <div class="card-panel">
+            <div class="row" >
+              <div class="col l3">
+                <img class="service-icon" src="img/ic_shopping_basket_black_24px.svg" alt="shopping"/>
+              </div>
+              <div class="col l9">
+                <h5 class="pink-text">Shop Online</h5>
+              </div>
             </div>
-        </div>
-
-        <div class="col s12 m6">
-            <div class="card darken-1 card-no-shadow">
-                <div class="card-content">
-                    <span class="card-title"><img class="service-icon" src="img/ic_local_atm_black_24px.svg" alt="deals" /><h2>Great Deals</h2></span>
-                    <p>
-                        Money: You've got it, we want it. But let it never be said we're not incredibly fair! Burger sales? Check. Pizza sales? Check. Burger and pizza sales?? Check, check, check! We seriously can't stop making deals.
-                    </p>
-                </div>
+            <div class="row">
+              <p>
+                  Using our convenient web app, you'll get all the power of Food without having to call your order in. Order in your pajamas, order 24 hours a day, order on Christmas, we're here to serve you.
+              </p>
             </div>
+          </div>
         </div>
+        <div class="col l4">
+          <div class="card-panel">
+            <div class="row" >
+              <div class="col l3">
+                <img class="service-icon" src="img/ic_local_shipping_black_24px.svg" alt="shipping"/>
+              </div>
+              <div class="col l9">
+                <h5 class="pink-text">Fast Delivery</h5>
+              </div>
+            </div>
+            <div class="row">
+              <p>
+                  You've never seen ordering this quick. Our proprietary ordering rocket ship delivery team allows you to spend less time being hungry, and more time doing what matters most to you. We'd ask what that is, but gFood respects your privacy.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col l4">
+          <div class="card-panel">
+            <div class="row" >
+              <div class="col l3">
+                <img class="service-icon" src="img/ic_local_atm_black_24px.svg" alt="money"/>
+              </div>
+              <div class="col l9">
+                <h5 class="pink-text">Great Deals</h5>
+              </div>
+            </div>
+            <div class="row">
+              <p>
+                  Money: You've got it, we want it. But let it never be said we're not incredibly fair! Burger sales? Check. Pizza sales? Check. Burger and pizza sales?? Check, check, check! We seriously can't stop making deals.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <footer class="page-footer" id="custom-footer">
+    <footer class="page-footer blue darken-3" id="custom-footer">
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
@@ -94,8 +111,8 @@
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <ul>
-                        <li><a class="grey-text text-lighten-3" href="#!">Home</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Order Delivery</a></li>
+                        <li><a class="grey-text text-lighten-3" href="index.html">Home</a></li>
+                        <li><a class="grey-text text-lighten-3" href="order.html">Order Delivery</a></li>
                     </ul>
                 </div>
             </div>
