--- a/order.html
+++ b/order.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <title>Order</title>
 
-
     <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
@@ -12,14 +11,16 @@
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-    <!-- <link rel="stylesheet" href="custom.css"> -->
 
+    <!-- custom -->
+    <link rel="stylesheet" href="custom.css">
     <script src="js/script.js" defer></script>
   </head>
   <body>
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
+
     <nav>
         <div class="nav-wrapper blue darken-3">
           <a href="index.html" class="brand-logo">Galvanize Delivers</a>
@@ -28,6 +29,7 @@
           </ul>
         </div>
     </nav>
+
     <div class="container">
       <div class="row">
         <div class="col s12 m7 l7">
