final commit before submission

--- a/order.html
+++ b/order.html
@@ -24,8 +24,13 @@
     <nav>
         <div class="nav-wrapper blue darken-3">
           <a href="index.html" class="brand-logo">Galvanize Delivers</a>
+          <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
               <li class="active"><a href="order.html">Order Delivery</a></li>
+          </ul>
+          <ul class="side-nav" id="mobile-demo">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="order.html">Order Delivery</a></li>
           </ul>
         </div>
     </nav>
@@ -34,7 +39,7 @@
       <div class="row">
         <div class="col s12 m7 l7">
           <h4>Menu</h4>
-          <div class="col s12 m6 l6">
+          <div class="col s12 l6">
             <div class="card">
               <div class="card-image">
                 <img src="img/burger.jpg" alt="burger" />
@@ -48,7 +53,7 @@
               </div>
             </div>
           </div>
-          <div class="col s12 m6 l6">
+          <div class="col s12 l6">
             <div class="card">
               <div class="card-image">
                 <img src="img/pizza.jpg" alt="burger" />
@@ -62,7 +67,7 @@
               </div>
             </div>
           </div>
-          <div class="col s12 m6 l6">
+          <div class="col s12 l6">
             <div class="card">
               <div class="card-image">
                 <img src="img/ribs.jpg" alt="burger" />
@@ -76,7 +81,7 @@
               </div>
             </div>
           </div>
-          <div class="col s12 m6 l6">
+          <div class="col s12 l6">
             <div class="card">
               <div class="card-image">
                 <img src="img/ice_cream.jpg" alt="burger" />
