--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
     <nav>
         <div class="nav-wrapper blue darken-3">
           <a href="index.html" class="brand-logo">Galvanize Delivers</a>
+          <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
               <li><a href="order.html">Order Delivery</a></li>
+          </ul>
+          <ul class="side-nav" id="mobile-demo">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="order.html">Order Delivery</a></li>
           </ul>
         </div>
     </nav>
